<resources>
    <string name="app_name">My Portfolio</string>

    <string name="portfolio">My Nanodegree Apps!</string>
    <string name="hello_world">Hello world!</string>
    <string name="capstone_app_name">CAPSTONE: MY OWN APP</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="scores_app">SCORES APP</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>

    <string name="capstone">capstone</string>
    <string name="xyz">xyz reader</string>
    <string name="buildit">build it bigger</string>
    <string name="library">library</string>
    <string name="scores">scores</string>
    <string name="spotify">spotify streamer</string>
</resources>
