<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


        <TextView android:text="@string/portfolio" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/title"
            android:layout_alignParentTop="true" />

        <Button
            style="@style/ButtonGenericAppearance"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotify_streamer"
            android:onClick="sendMessage"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"/>

        <Button
            style="@style/ButtonGenericAppearance"
            android:text="@string/scores_app"
            android:id="@+id/scores_app"
            android:layout_below="@+id/spotify_streamer"
            android:onClick="sendMessage"/>

        <Button
            style="@style/ButtonGenericAppearance"
            android:text="@string/library_app"
            android:id="@+id/library_app"
            android:layout_below="@+id/scores_app"
            android:onClick="sendMessage"/>

        <Button
            style="@style/ButtonGenericAppearance"
            android:text="@string/build_it_bigger"
            android:id="@+id/build_it_bigger"
            android:layout_below="@+id/library_app"
            android:onClick="sendMessage"/>

        <Button
            style="@style/ButtonGenericAppearance"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz_reader"
            android:layout_below="@+id/build_it_bigger"
            android:onClick="sendMessage"/>

        <Button
            style="@style/ButtonGenericAppearance.Original"
            android:text="@string/capstone_app_name"
            android:id="@+id/capstone_app_name"
            android:layout_below="@+id/xyz_reader"
            android:onClick="sendMessage" />

    </RelativeLayout>
</ScrollView>
